syntax = "proto3";

package backend.v1;

option go_package = "grpctemplate/rpc/backend/v1;backend";

import "google/api/annotations.proto";

import "google/protobuf/timestamp.proto";
import "lib/v1/enum_campaign_type.proto";

message HelloRequest {
  lib.v1.CampaignType type = 1;
  google.protobuf.Timestamp created_at = 2;
}

message HelloResponse {
}

message GetRequest {
}

message GetResponse {
  google.protobuf.Timestamp created_at = 1;
}

service Hello {
  rpc Hello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/api/hello"
      body: "*"
    };
  }

  rpc Get (GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/api/hello"
    };
  }
}
